yaml/demo-crm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-crm-deployment
  labels:
    app: demo-crm
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-crm
  template:
    metadata:
      labels:
        app: demo-crm
    spec:
      containers:
      - name: demo-crm
        image: gcr.io/kubernetes-bootcamp-365905/adam_demo-crm:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
