yaml/demo-crm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-crm-service
  labels:
    app: demo-crm
spec:
  type: ClusterIP
  selector:
    app: demo-crm
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
